Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115699

[REG 6.4.3-6.5] Changing the minimum size get the window out of maximized state

    XMLWordPrintable

Details

    • Windows
    • 7efc0f6f1 (dev), 8f07015af (6.6), 953c5e5d0 (6.5), b0ba5c78e (dev)

    Description

      Changing the minimum size get the window out of maximized state.
      Regression since Qt 6.5. No such problem with Qt 6.4.3 and below.

      Sample code:

      import QtQuick
      import QtQuick.Window
      import QtQuick.Controls
      
      Window {
          id: wnd
          width: 640
          height: 480
          visible: true
      
          visibility: Window.Maximized
          Button {
              anchors.centerIn: parent
              text: 'Push me!'
              onClicked: wnd.minimumWidth += 10 // this breaks maximized window state
          }
      }
      

      Steps to reproduce:
      1. Run sample
      2. Push the button
      3. Check window state (at window title bar)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            studiosus Vladimir Belyavsky
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: